--- a/style.css
+++ b/style.css
@@ -82,27 +82,25 @@ IMG.displayed {
 
 
 /* About */
-.phoneIMG{
-    display: inherit;
-    width: 150px;
-    height: 150px;
-    position: absolute;
-    right: 500px;
-    top: 150px;
-}
-
 
 .mailIMG{
     display: inherit;
     width: 150px;
     height: 150px;
     position: absolute;
-    left: 500px;
-    top: 150px; 
+    left: 28%;
+    top: 150px;
 }
 
 
-
+.phoneIMG{
+    display: inherit;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    right: 28%;
+    top: 150px;
+}
 
 
 
